feature(functions/array-functions/array:empty): Implemented array:empty function refined semantics, implementation and tests